# test-next

./: .gitignore  package-lock.json  package.json
client/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx
client/src/app/(main)/: page.tsx
client/src/components/ChoiceBlock/: ChoiceBlock.tsx
client/src/components/ContentWrapper/: ContentWrapper.tsx
client/src/components/Header/: Header.tsx  Location.tsx  Logo.tsx  NavLink.tsx  ViewerMenu.tsx
client/src/components/ImageSlider/: ImageSlider.tsx
client/src/components/MainBody/: Block1.tsx  Block2.tsx  BlockContainer.tsx  Card.tsx  Filters.tsx  LayoutInfo.tsx  Layouts.tsx  MainBody.tsx  SelectCity.tsx  SelectComplex.tsx  SelectRooms.tsx  StepSlider.tsx
client/src/components/ProgressStepper/: ProgressStepper.tsx
client/src/components/UI/: Button.tsx  Checkbox.tsx  Input.tsx
client/src/providers/: configurationStoreProvider.tsx  progressBarStoreProvider.tsx
client/src/store/: configurationStore.ts  progressBarStore.ts
server/: db.sqlite3  pyproject.toml
server/SamsonRoom/: asgi.py  settings.py  urls.py  wsgi.py
server/main/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
server/main/migrations/: 0001_initial.py  0002_layout_description.py  0003_rename_housenumber_layout_rooms.py  0004_layout_housenumber.py  0005_alter_layout_rooms.py  0006_alter_layout_rooms.py
server/src/: manage.py
server/src/SamsonRoom/: settings.py  urls.py
